--- a/index.html
+++ b/index.html
@@ -13,32 +13,48 @@
   <main>
     <h2>Remarkable constructions of classical antiquity—lost in time</h2>
     <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
-
-    <img src="images/temple-of-artemis.jpg" alt="">
-    <h2>Temple of Artemis</h2>
-    <dl class="">
-      <dt>Construction:</dt>
-        <dd>Circa 550 BC</dd>
-      <dt>Builders:</dt>
-        <dd>Greeks</dd>
-      <dt>Location:</dt>
-        <dd>Selçuk, Turkey</dd>
-    </dl>
   </main>
 
+  <aside class="">
+    <div class="">
+      <img src="images/temple-of-artemis.jpg" alt="">
+      <h2>Temple of Artemis</h2>
+      <dl class="">
+        <dt>Construction:</dt>
+          <dd>Circa 550 BC</dd>
+        <dt>Builders:</dt>
+          <dd>Greeks</dd>
+        <dt>Location:</dt>
+          <dd>Selçuk, Turkey</dd>
+      </dl>
+    </div>
 
+    <div class="">
+      <img src="images/colossus-of-rhodes.jpg" alt="">
+      <h2>Colossus of Rhodes</h2>
+      <dl class="">
+        <dt>Construction:</dt>
+          <dd>Circa 292–280 BC</dd>
+        <dt>Builders:</dt>
+          <dd>Greeks</dd>
+        <dt>Location:</dt>
+          <dd>Rhodes, Greece</dd>
+      </dl>
+    </div>
 
-
-  Colossus of Rhodes
-  Construction: 292–280 BC
-  Builders: Greeks
-  Location: Rhodes, Greece
-
-  Gardens of Babylon
-  Construction: Circa 600 BC
-  Builders: Babylonians
-  Location: Nineveh, Iraq
-
+    <div class="">
+      <img src="images/hanging-gardens-of-babylon.jpg" alt="">
+      <h2>Gardens of Babylon</h2>
+      <dl class="">
+        <dt>Construction:</dt>
+          <dd>Circa 600 BC</dd>
+        <dt>Builders:</dt>
+          <dd>Babylonians</dd>
+        <dt>Location:</dt>
+          <dd>Nineveh, Iraq</dd>
+      </dl>
+    </div>
+  </aside>
 
 </body>
 </html>
