--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>The Ancient World</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
 
@@ -17,42 +19,54 @@
 
   <aside class="">
     <div class="">
-      <img src="images/temple-of-artemis.jpg" alt="">
-      <h2>Temple of Artemis</h2>
-      <dl class="">
-        <dt>Construction:</dt>
-          <dd>Circa 550 BC</dd>
-        <dt>Builders:</dt>
-          <dd>Greeks</dd>
-        <dt>Location:</dt>
-          <dd>Selçuk, Turkey</dd>
-      </dl>
+      <figure>
+        <figcaption>
+        <img src="images/temple-of-artemis.jpg" alt="">
+        <h2>Temple of Artemis</h2>
+        <dl class="">
+          <dt>Construction:</dt>
+            <dd>Circa 550 BC</dd>
+          <dt>Builders:</dt>
+            <dd>Greeks</dd>
+          <dt>Location:</dt>
+            <dd>Selçuk, Turkey</dd>
+        </dl>
+        </figcaption>
+      </figure>
     </div>
 
     <div class="">
-      <img src="images/colossus-of-rhodes.jpg" alt="">
-      <h2>Colossus of Rhodes</h2>
-      <dl class="">
-        <dt>Construction:</dt>
-          <dd>Circa 292–280 BC</dd>
-        <dt>Builders:</dt>
-          <dd>Greeks</dd>
-        <dt>Location:</dt>
-          <dd>Rhodes, Greece</dd>
-      </dl>
+      <figure>
+        <figcaption>
+        <img src="images/colossus-of-rhodes.jpg" alt="">
+        <h2>Colossus of Rhodes</h2>
+        <dl class="">
+          <dt>Construction:</dt>
+            <dd>Circa 292–280 BC</dd>
+          <dt>Builders:</dt>
+            <dd>Greeks</dd>
+          <dt>Location:</dt>
+            <dd>Rhodes, Greece</dd>
+        </dl>
+        </figcaption>
+      </figure>
     </div>
 
     <div class="">
-      <img src="images/hanging-gardens-of-babylon.jpg" alt="">
-      <h2>Gardens of Babylon</h2>
-      <dl class="">
-        <dt>Construction:</dt>
-          <dd>Circa 600 BC</dd>
-        <dt>Builders:</dt>
-          <dd>Babylonians</dd>
-        <dt>Location:</dt>
-          <dd>Nineveh, Iraq</dd>
-      </dl>
+      <figure>
+        <figcaption>
+        <img src="images/hanging-gardens-of-babylon.jpg" alt="">
+        <h2>Gardens of Babylon</h2>
+        <dl class="">
+          <dt>Construction:</dt>
+            <dd>Circa 600 BC</dd>
+          <dt>Builders:</dt>
+            <dd>Babylonians</dd>
+          <dt>Location:</dt>
+            <dd>Nineveh, Iraq</dd>
+        </dl>
+        </figcaption>
+      </figure>
     </div>
   </aside>
 
