--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 </head>
 <body>
 
-  <header>
+  <header role="banner">
     <h1>The Seven Wonders of the Ancient World</h1>
   </header>
 
-  <main>
+  <main role="main">
     <h2>Remarkable constructions of classical antiquity—lost in time</h2>
     <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
   </main>
 
-  <aside class="">
-    <div class="">
+  <aside>
+    <div>
       <figure>
         <figcaption>
-          <img src="images/temple-of-artemis.jpg" alt="">
+          <img src="images/temple-of-artemis.jpg" alt="An illustration of the Temple of Artemis">
           <h2>Temple of Artemis</h2>
           <dl class="">
             <dt>Construction:</dt>
@@ -37,10 +37,10 @@
       </figure>
     </div>
 
-    <div class="">
+    <div>
       <figure>
         <figcaption>
-          <img src="images/colossus-of-rhodes.jpg" alt="">
+          <img src="images/colossus-of-rhodes.jpg" alt="An illustration of the Collosus of Rhodes">
           <h2>Colossus of Rhodes</h2>
           <dl class="">
             <dt>Construction:</dt>
@@ -54,10 +54,10 @@
       </figure>
     </div>
 
-    <div class="">
+    <div>
       <figure>
         <figcaption>
-          <img src="images/hanging-gardens-of-babylon.jpg" alt="">
+          <img src="images/hanging-gardens-of-babylon.jpg" alt="An illustration of the Gardens of Babylon">
           <h2>Gardens of Babylon</h2>
           <dl class="">
             <dt>Construction:</dt>
