Fix the main.css
Fix the main.css trying to make it work, by changing the code within it.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </main>
 
   <aside>
-    <div>
+    <div class="temple">
       <figure>
         <img src="images/temple-of-artemis.jpg" alt="An illustration of the Temple of Artemis">
         <figcaption>
@@ -37,7 +37,7 @@
       </figure>
     </div>
 
-    <div>
+    <div class="rhodes">
       <figure>
         <img src="images/colossus-of-rhodes.jpg" alt="An illustration of the Collosus of Rhodes">
         <figcaption>
@@ -54,7 +54,7 @@
       </figure>
     </div>
 
-    <div>
+    <div class="babylon">
       <figure>
         <img src="images/hanging-gardens-of-babylon.jpg" alt="An illustration of the Gardens of Babylon">
         <figcaption>
