--- a/index.html
+++ b/index.html
@@ -10,32 +10,34 @@
 </head>
 <body>
 
-  <header role="banner">
+  <header role="header">
     <h1>The Seven Wonders of the Ancient World</h1>
   </header>
 
-  <main role="main">
-    <h2>Remarkable constructions of classical antiquity—lost in time</h2>
-    <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+  <main role="banner">
+    <img class="img-banner" src="images/seven-wonders.jpg" alt="Seven Wonders">
+    <div class="banner-text">
+      <h2>Remarkable constructions of classical antiquity—lost in time</h2>
+      <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+    </div>
   </main>
 
   <aside>
-    <div class="temple">
-      <figure>
-        <img src="images/temple-of-artemis.jpg" alt="An illustration of the Temple of Artemis">
-        <figcaption>
-          <h2>Temple of Artemis</h2>
-          <dl>
-            <dt>Construction:</dt>
-            <dd>Circa 550 BC</dd>
-            <dt>Builders:</dt>
-            <dd>Greeks</dd>
-            <dt>Location:</dt>
-            <dd>Selçuk, Turkey</dd>
-          </dl>
-        </figcaption>
-      </figure>
-    </div>
+    <figure>
+      <img src="images/temple-of-artemis.jpg" alt="An illustration of the Temple of Artemis">
+      <figcaption>
+        <h2>Temple of Artemis</h2>
+        <dl>
+          <dt>Construction:</dt>
+          <dd>Circa 550 BC</dd>
+          <dt>Builders:</dt>
+          <dd>Greeks</dd>
+          <dt>Location:</dt>
+          <dd>Selçuk, Turkey</dd>
+        </dl>
+      </figcaption>
+    </figure>
+
 
     <div class="rhodes">
       <figure>
