--- a/index.html
+++ b/index.html
@@ -8,21 +8,19 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@0;1&display=swap" rel="stylesheet">
 </head>
-<body>
 
-  <header role="header">
+<body>
+  <header role="banner">
     <h1>The Seven Wonders of the Ancient World</h1>
   </header>
 
-  <main role="banner">
-    <img class="img-banner" src="images/seven-wonders.jpg" alt="Seven Wonders">
+  <main role="main">
+    <img class="img-banner" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="Seven Wonders">
     <div class="banner-text">
       <h2>Remarkable constructions of classical antiquity—lost in time</h2>
       <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
     </div>
-  </main>
 
-  <aside>
     <figure>
       <img src="images/temple-of-artemis.jpg" alt="An illustration of the Temple of Artemis">
       <figcaption>
@@ -37,7 +35,6 @@
         </dl>
       </figcaption>
     </figure>
-
 
     <div class="rhodes">
       <figure>
@@ -72,7 +69,7 @@
         </figcaption>
       </figure>
     </div>
-  </aside>
+  </main>
 
 </body>
 </html>
